# karma_shop_django

./: README.md  pyproject.toml
.github/workflows/: autoyapf.yml  main.yml
karma_shop/: db.sqlite3  manage.py
karma_shop/karma_shop/: asgi.py  settings.py  urls.py  wsgi.py
karma_shop/shop/: admin.py  const.py  models.py  views.py
karma_shop/shop/migrations/: 0001_initial.py  0002_sneakers_image.py
karma_shop/shop/templates/: index.html
karma_shop/shop/templates/base/: base.html  footer.html  header.html
