[tool.poetry]
name = "karma-shop-django"
version = "0.1.0"
description = ""
authors = ["HomeSani <dfghjjhgfd311@gmail.com>"]
readme = "README.md"
packages = [{include = "karma_shop_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
